--- a/site-plan.html
+++ b/site-plan.html
@@ -106,7 +106,7 @@
 			<!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
 			<nav>
 				<a href="brightstart/index.html">Home</a>
-				<a href="brightstart/todolist.html">Page2</a>
+				<a href="brightstart/todo.html">Page2</a>
 				<a href="#">Page3</a>
 			</nav>
 			<hr />
